[package]
name = "chowner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive", "cargo"] }
file-owner = "0.1.1"
posix-acl = "1.1.0"
rayon = "1.6.1"
xattr = "1.0.0"
